--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
     .btn-reset { background: #f0f0f0; color: #000; padding: 1rem 2rem; border: none; }
     .btn-reset:hover { background: #e0e0e0; transform: translateY(-2px); }
     .result-card { background: linear-gradient(135deg, #28a745, #20c997); color: #fff; border-radius: 15px; padding: 2rem; margin-top: 2rem; box-shadow: 0 8px 25px rgba(40,167,69,.3); }
-    .result-item { display: flex; justify-content: space-between; align-items: center; padding: .5rem 0; border-bottom: 1px solid rgba(255,255,255,.2); }
+    .result-item {
+      display: grid;
+      grid-template-columns: 1fr auto;
+      align-items: center;
+      padding: .5rem 0;
+      border-bottom: 1px solid rgba(255,255,255,.2);
+    }
     .result-item:last-child { border: none; margin-top: 1rem; font-size: 1.3rem; font-weight: bold; }
+    .result-item span:last-child { white-space: nowrap; text-align: right; }
     .currency { font-family: 'Courier New', monospace; font-weight: bold; }
     .icon-container { background: rgba(255,255,255,.1); border-radius: 50%; width: 50px; height: 50px; display: flex; align-items: center; justify-content: center; margin: 0 auto 1rem; }
     .input-group-text { background: var(--vitrina-red); color: #fff; border: 2px solid var(--vitrina-red); border-radius: 12px 0 0 12px; }
@@ -32,6 +39,7 @@
     @media (max-width: 576px) {
       .form-label, .form-control, .form-select, .btn-calculate, .btn-reset { font-size: .9rem; }
       .btn-calculate, .btn-reset { padding: .75rem 1rem; }
+      .result-card { padding: 1.5rem; }
     }
     @media (min-width: 577px) and (max-width: 992px) { .form-label, .form-control, .form-select { font-size: 1rem; } }
     @media (min-width: 993px) { .form-label, .form-control, .form-select { font-size: 1.1rem; } }
@@ -61,11 +69,9 @@
               </div>
             </div>
             <div id="trmInfo" class="mb-4" style="display:none">
-              <div class="alert alert-info">
-                <div class="d-flex justify-content-between align-items-center">
-                  <strong>TRM:</strong> $<span id="trmValue">0,00</span> COP por USD
-                  <small id="trmFecha" style="opacity:.8"></small>
-                </div>
+              <div class="alert alert-info d-flex flex-column">
+                <strong>TRM:</strong> $<span id="trmValue">0,00</span> COP por USD
+                <small id="trmFecha" style="opacity:.8; margin-top:.25rem"></small>
               </div>
             </div>
             <div class="row mb-4 align-items-center">
@@ -96,8 +102,8 @@
               <div class="result-item" id="filaConversion" style="display:none"><span><i class="fas fa-exchange-alt me-2"></i>Costo Original (USD):</span><span class="currency" id="mostrarCostoUSD">$0,00 USD</span></div>
               <div class="result-item"><span><i class="fas fa-chart-line me-2"></i>Rentabilidad (<span id="mostrarPorcentaje">0</span>%):</span><span class="currency" id="mostrarRentabilidad">$0,00 COP</span></div>
               <div class="result-item"><span><i class="fas fa-bullhorn me-2"></i>Publicidad (2%):</span><span class="currency" id="mostrarPublicidad">$0,00 COP</span></div>
-              <div class="result-item"><span><i class="fas fa-cube me-2"></i>Costo de Empaque:</span><span class="currency">$1 000 COP</span></div>
-              <div class="result-item"><span><i class="fas fa-truck me-2"></i>Costo de Envío:</span><span class="currency">$25 000 COP</span></div>
+              <div class="result-item"><span><i class="fas fa-cube me-2"></i>Costo de Empaque:</span><span class="currency">$1 000 COP</span></div>
+              <div class="result-item"><span><i class="fas fa-truck me-2"></i>Costo de Envío:</span><span class="currency">$25 000 COP</span></div>
               <div class="result-item"><span><i class="fas fa-tags me-2"></i><strong>PRECIO FINAL:</strong></span><span class="currency" id="precioFinal">$0,00 COP</span></div>
             </div>
           </div>
@@ -105,16 +111,16 @@
       </div>
     </div>
   </div>
-  <footer class="text-center py-4" style="background: var(--vitrina-dark); color: #fff;"><div class="container"><p class="mb-0">© 2025 Vitrina Inc. Todos los derechos reservados.</p></div></footer>
+  <footer class="text-center py-4" style="background: var(--vitrina-dark); color: #fff;"><div class="container"><p class="mb-0">© 2025 Vitrina Inc. Todos los derechos reservados.</p></div></footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
   <script>
     let TRM=0, currentTipo='COP', costoEmpaque=1000, costoEnvio=25000;
     async function cargarTRM(){ try{ let res=await fetch('trm.json',{cache:'no-store'}), data=await res.json(); TRM=data.trm; document.getElementById('trmFecha').textContent=new Date(data.updated_at).toLocaleString('es-CO',{dateStyle:'short',timeStyle:'short'});}catch(e){console.error(e);} document.getElementById('trmValue').textContent=TRM.toLocaleString('es-CO',{minimumFractionDigits:2,maximumFractionDigits:2}); }
     function llenarRentabilidad(){ let s=document.getElementById('rentabilidad'); s.innerHTML=''; let opt=document.createElement('option'); opt.value=''; opt.text='Seleccione porcentaje'; s.append(opt); for(let i=30;i<=200;i+=5){let o=document.createElement('option'); o.value=i; o.text=i+'%'; s.append(o);} }
-    function cambiarMoneda(){ let n=document.getElementById('tipoMoneda').value, inp=document.getElementById('costoBruto'), v=parseFloat(inp.value)||0; if(v>0&&n!==currentTipo){ v=n==='USD'?v/TRM:v*TRM; inp.value=v.toFixed(2);} document.getElementById('simboloMoneda').textContent='$'; document.getElementById('codigoMoneda').textContent=n; document.getElementById('trmInfo').style.display=n==='USD'?'block':'none'; document.getElementById('conversionEnVivo').style.display=n==='USD'?'block':'none'; document.getElementById('textoAyuda').textContent=n==='USD'?'Ingrese el costo en dólares (se convertirá al calcular)':'Ingrese el costo base en pesos'; currentTipo=n; mostrarConversion(); }
+    function cambiarMoneda(){ let n=document.getElementById('tipoMoneda').value, inp=document.getElementById('costoBruto'), v=parseFloat(inp.value)||0; if(v>0&&n!==currentTipo){ v=n==='USD'?v/TRM:v*TRM; inp.value=v.toFixed(2);} document.getElementById('simboloMoneda').textContent='$'; document.getElementById('codigoMoneda').textContent=n; document.getElementById('trmInfo').style.display=n==='USD'?'block':'none'; document.getElementById('conversionEnVivo').style.display=n==='USD'?'block':'none'; document.getElementById('textoAyuda').textContent=n==='USD'?'Ingrese el costo en dólares (se convertirá al calcular)':'Ingrese el costo base en pesos'; currentTipo=n; mostrarConversión(); }
     function mostrarConversion(){ let v=parseFloat(document.getElementById('costoBruto').value)||0; document.getElementById('valorConvertido').textContent=currentTipo==='USD'&&v>0?(v*TRM).toLocaleString('es-CO',{minimumFractionDigits:2,maximumFractionDigits:2}):'0,00'; }
-    function calcularPrecio(){ let bruto=parseFloat(document.getElementById('costoBruto').value), pct=parseInt(document.getElementById('rentabilidad').value); if(!bruto||!pct){ return alert('Complete todos los campos.');} let brutoCOP=currentTipo==='USD'?bruto*TRM:bruto, renta=brutoCOP*(pct/100), pub=brutoCOP*0.02, total=brutoCOP+renta+pub+costoEmpaque+costoEnvio; document.getElementById('mostrarCostoBruto').textContent='$'+brutoCOP.toLocaleString('es-CO',{minimumFractionDigits:2})+' COP'; document.getElementById('mostrarPorcentaje').textContent=pct; document.getElementById('mostrarRentabilidad').textContent='$'+renta.toLocaleString('es-CO',{minimumFractionDigits:2})+' COP'; document.getElementById('mostrarPublicidad').textContent='$'+pub.toLocaleString('es-CO',{minimumFractionDigits:2})+' COP'; document.getElementById('precioFinal').textContent='$'+total.toLocaleString('es-CO',{minimumFractionDigits:2})+' COP'; if(currentTipo==='USD'){ document.getElementById('mostrarCostoUSD').textContent='$'+bruto.toLocaleString('es-CO',{minimumFractionDigits:2})+' USD'; document.getElementById('filaConversion').style.display='flex'; } else document.getElementById('filaConversion').style.display='none'; document.getElementById('resultados').style.display='block'; }
-    function resetForm(){ document.getElementById('costoBruto').value=''; document.getElementById('rentabilidad').value=''; document.getElementById('resultados').style.display='none'; document.getElementById('trmInfo').style.display='none'; document.getElementById('conversionEnVivo').style.display='none'; currentTipo=''; document.getElementById('tipoMoneda').value='COP'; cambiarMoneda(); }
+    function calcularPrecio(){ let bruto=parseFloat(document.getElementById('costoBruto').value), pct=parseInt(document.getElementById('rentabilidad').value); if(!bruto||!pct){ return alert('Complete todos los campos.');} let brutoCOP=currentTipo==='USD'?bruto*TRM:bruto, renta=brutoCOP*(pct/100), pub=brutoCOP*0.02, total=brutoCOP+renta+pub+costoEmpaque+costoEnvio; document.getElementById('mostrarCostoBruto').textContent='$'+brutoCOP.toLocaleString('es-CO',{minimumFractionDigits:2})+' COP'; document.getElementById('mostrarPorcentaje').textContent=pct; document.getElementById('mostrarRentabilidad').textContent='$'+renta.toLocaleString('es-CO',{minimumFractionDigits:2})+' COP'; document.getElementById('mostrarPublicidad').textContent='$'+pub.toLocaleString('es-CO',{minimumFractionDigits:2})+' COP'; document.getElementById('precioFinal').textContent='$'+total.toLocaleString('es-CO',{minimumFractionDigits:2})+' COP'; if(currentTipo==='USD'){ document.getElementById('mostrarCostoUSD').textContent='$'+bruto.toLocaleString('es-CO',{minimumFractionDigits:2})+' USD'; document.getElementById('filaConversion').style.display='grid'; } else document.getElementById('filaConversion').style.display='none'; document.getElementById('resultados').style.display='block'; }
+    function resetForm(){ document.getElementById('costoBruto').value=''; document.getElementById('rentabilidad').value=''; document.getElementById('resultados').style.display='none'; document.getElementById('trmInfo').style.display='none'; document.getElementById('conversionEnVivo').style.display='none'; document.getElementById('tipoMoneda').value='COP'; cambiarMoneda(); }
     window.addEventListener('DOMContentLoaded',async()=>{ await cargarTRM(); llenarRentabilidad(); cambiarMoneda(); });
   </script>
 </body>
