--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Vitrina Inc – Calculadora de Precios</title>
+  <title>Origenes – Calculadora Precio Final </title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <style>
@@ -135,7 +135,7 @@
 </head>
 <body>
   <header class="brand-header">
-    <img src="outlet-logo.png" alt="Outlet Logo" class="logo-header">
+    <img src="logo-origenes.png" alt="logo origenes" class="logo-header">
     <h1 class="brand-logo mb-2">Vitrina Inc</h1>
     <p class="lead mb-0">Calculadora de Precio Final</p>
   </header>
@@ -354,3 +354,4 @@
   </script>
 </body>
 </html>
+
