--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <style>
     :root {
-      --vitrina-red: #E53025;
-      --vitrina-dark: #3A3A3A;
+      --origenes-negro: #131313;
+      --origenes-dorado: #846b3f;
     }
     body {
       background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
@@ -135,7 +135,7 @@
 </head>
 <body>
   <header class="brand-header">
-    <img src="outlet-logo.png" alt="Outlet Logo" class="logo-header">
+    <img src="logo-origenes.png" alt="logo origenes" class="logo-header">
     <h1 class="brand-logo mb-2">Vitrina Inc</h1>
     <p class="lead mb-0">Calculadora de Precio Final</p>
   </header>
@@ -238,7 +238,7 @@
   </div>
   <footer class="text-center py-4" style="background: var(--vitrina-dark); color: white;">
     <div class="container">
-      <p class="mb-0">© 2025 Vitrina Inc. Todos los derechos reservados.</p>
+      <p class="mb-0">© 2025 Origenes Inc. Todos los derechos reservados.</p>
     </div>
   </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
@@ -354,3 +354,4 @@
   </script>
 </body>
 </html>
+
