--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
 <body>
   <header class="brand-header">
     <img src="logo-origenes.png" alt="logo origenes" class="logo-header">
-    <h1 class="brand-logo mb-2">Vitrina Inc</h1>
-    <p class="lead mb-0">Calculadora de Precio Final</p>
+    <h1 class="brand-logo mb-2">Origenes</h1>
+    <p class="lead mb-0">Moda Original</p>
   </header>
 
   <div class="container my-5">
@@ -457,4 +457,5 @@
   </script>
 </body>
 </html>
+
 
